tests/neg-scalajs/jsexportall-bad-names.scala
import scala.scalajs.js
import scala.scalajs.js.annotation.*

@JSExportAll
class A {
  val __f = 1 // error
  def a_= = 2 // error
}
